--- a/MCC contests.html
+++ b/MCC contests.html
@@ -16,7 +16,7 @@
 </header>
 
 <ul>
-  <li><a href="MCC homepage.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a class="active" href="MCC contests.html">Contests</a></li>
   <li><a href="https://forms.office.com/pages/responsepage.aspx?id=74xl2ZICUkKZJWRC3iSkS6UETR1ehf9BrBezrWZ6ZpdURFFMR1NLNVY1OVhZTExHRkNYSUJONzgxTS4u">Apply</a></li>
   <li><a href="MCC staff.html">Staff</a></li>
